force-app/main/default/objects/Error_Log__c/fields/Area_of_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Area_of_opportunity__c</fullName>
    <label>Area of opportunity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Review</fullName>
            </value>
            <value>
                <fullName>Process Review(Internal)</fullName>
            </value>
            <value>
                <fullName>Process Review(Merchant)</fullName>
            </value>
            <value>
                <fullName>Staff Training</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>Communication(Internal)</fullName>
            </value>
            <value>
                <fullName>Communication(Merchant)</fullName>
            </value>
            <value>
                <fullName>Communication(Customer)</fullName>
            </value>
            <value>
                <fullName>Deal Config</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>