force-app/main/default/objects/Error_Log__c/fields/Cruise__c.field-meta.xml
<CustomField>
    <fullName>Cruise__c</fullName>
    <label>Cruise</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>