force-app/main/default/objects/Error_Log__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>