force-app/main/default/objects/Error_Log__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>PAF</fullName>
            </value>
            <value>
                <fullName>BDM</fullName>
            </value>
            <value>
                <fullName>Analysts</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>