force-app/main/default/objects/Error_Log__c/fields/Flights__c.field-meta.xml
<CustomField>
    <fullName>Flights__c</fullName>
    <label>Flights</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>