force-app/main/default/objects/Error_Log__c/fields/Land__c.field-meta.xml
<CustomField>
    <fullName>Land__c</fullName>
    <label>Land</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>