force-app/main/default/objects/Error_Log__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>