force-app/main/default/objects/Error_Log__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>Error Log</relationshipLabel>
    <relationshipName>Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>