force-app/main/default/objects/Error_Log__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Payment Required</fullName>
            </value>
            <value>
                <fullName>TAD Paid</fullName>
            </value>
            <value>
                <fullName>Customer Paid</fullName>
            </value>
            <value>
                <fullName>Merchant Paid</fullName>
            </value>
            <value>
                <fullName>Merchant to reimburse TAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>