force-app/main/default/objects/Error_Log__c/fields/TAD_Merchant_to_reimburse__c.field-meta.xml
<CustomField>
    <fullName>TAD_Merchant_to_reimburse__c</fullName>
    <label>TAD - Merchant to reimburse</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>