force-app/main/default/objects/Error_Log__c/fields/TAD_No_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>TAD_No_Reimbursement__c</fullName>
    <label>TAD - No Reimbursement</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>